# working_v1

./: .gitignore  README.md  pyproject.toml
src/perp_market_microstructure_research/core/: fixed_point.py
src/perp_market_microstructure_research/core/orderbook/: __init__.py  apply.py  snapshot.py  state.py
src/perp_market_microstructure_research/core/schemas/: l2_delta.py
src/perp_market_microstructure_research/ingestion/adapters/binance/: depth_recorder.py
src/perp_market_microstructure_research/ingestion/writers/: rotating_jsonl_writer.py
src/perp_market_microstructure_research/pipelines/: normalize_l2.py  record_live.py
src/perp_market_microstructure_research/replay/: __init__.py  driver.py  invariants.py  loader.py
src/perp_market_microstructure_research/validation/: audit.py  continuity.py
