[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "perp-market-microstructure-research"
version = "0.1.0"
description = "Research-grade market microstructure ingestion and analysis"
requires-python = ">=3.10"
dependencies = [
    "orjson",
    "websockets",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
